--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,108 @@
 body {
   background-color: rgb(37, 96, 169);
 }
+.heading {
+  font-size: 5rem;
+}
 .parent-container {
-  padding: 7px;
+  margin-top: 5%;
+  padding: 30px;
+  height: min-content;
+  width: 800px;
   border-color: aliceblue;
   border-radius: 20px;
   border: 2px solid white;
 }
-.child-container{
+.child-container {
   padding-left: 5%;
   border-color: aliceblue;
   border-radius: 20px;
   border: 2px solid white;
 }
-.to-do-list{
+.to-do-list {
   font-family: Arial, sans-serif;
   text-align: center;
+}
+
+li {
+  padding: 15px;
+  display: flex;
+}
+.text {
+  flex: 1;
+  font-size: large;
+  font-weight: 500;
+}
+.delete-button {
+  background-color: rgba(254, 0, 0, 0);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border-color: aliceblue;
+  transition: 0.5s;
+}
+.delete-button:hover {
+  background-color: rgba(254, 0, 0, 0.72);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border-color: aliceblue;
+}
+.move-button {
+  background-color: rgba(254, 119, 0, 0);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border-color: rgb(240, 248, 255);
+  transition: 0.5s;
+}
+.move-button:hover {
+  background-color: rgba(254, 119, 0, 0.813);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border-color: rgb(240, 248, 255);
+  border-color: aliceblue;
+}
+input {
+  background-color: transparent;
+  border-color: transparent;
+  border-bottom-color: white;
+  border-bottom-width: 1px;
+  width: 300px;
+  font-weight: 400;
+  color: aliceblue;
+}
+input {
+  background-color: transparent;
+  border-color: transparent;
+  border-bottom-color: white;
+  border-bottom-width: 1px;
+  width: 300px;
+  font-weight: 400;
+  color: aliceblue;
+}
+
+.add-button {
+  background-color: rgba(254, 220, 0, 0);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border-color: aliceblue;
+  transition: 0.5s;
+  font-size: x-large;
+}
+.add-button:hover {
+  background-color: rgb(140, 254, 0);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  border-color: aliceblue;
+}
+header {
+  color: aliceblue;
+  background-color: rgb(0, 0, 0);
+}
+.footer {
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  color: aliceblue;
+  background-color: rgb(0, 0, 0);
 }
